@@ -1,3 +1,8 @@
+2010-01-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thcoll/cweight.c, src/thcoll/cweight.h, src/thcoll/thcoll.c:
+	Remove GPL header left over. The library is LGPL.
+
 2010-01-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/brk-maximal.c (brk_root_pool): Fail if brk_pool_node_new()
